Increase input text box size This change increseas the input text box size to prevent it from becoming misalogned on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ input {
   text-align: left;
   font-style: italic;
   width: 300px;
-  height: 30px;
+  height: 32px;
   position: absolute;
   top: 90%;
   left: 45%;
